# azure-artifacts-demo

./: README.md  pyproject.toml
.github/workflows/: publish.yml  verify-install.yml
src/azure_artifacts_demo/: __init__.py
