[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-artifacts-demo"
version = "0.1.1"
description = "Minimal package for Azure Artifacts publishing demo"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sushant Sonbarse" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
